--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -23,11 +23,18 @@ body {
 
 .navbar{
   background: image_url('restaurant.png');
-  padding: 30px;
   box-shadow: 0px 1px 3px #2a2a2a;
+  padding: 20px;
 }
 
 body{
   background: url('so_white.png');
   font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.navbar-inverse .navbar-brand{
+ font-family: "Helvetica Neue", Helvetica, sans-serif;
+ font-weight: 600;
+ letter-space: -0.3px; 
+ font-size: 40px;
 }
