--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,4 +1,5 @@
 @import 'bootstrap';
+@import "font-awesome";
 
 .booyah-box {
   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
@@ -32,9 +33,61 @@ body{
   font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-.navbar-inverse .navbar-brand{
+.navbar-inverse .navbar-brand {
  font-family: "Helvetica Neue", Helvetica, sans-serif;
  font-weight: 600;
- letter-space: -0.3px; 
+ letter-spacing: -0.3px; 
  font-size: 40px;
+}
+
+.navbar-brand {
+  text-shadow: 0px 1px 3px #000000;
+}
+
+.nav-link {
+  color: white;
+}
+.pagination {
+  background: white;
+  cursor: default;
+  height: 30px;
+  a, span, em {
+    padding: 0.2em 0.5em;
+    display: block;
+    float: left;
+    margin-right: 1px;
+  }
+  .disabled {
+    color: #999999;
+    border: 1px solid #dddddd;
+  }
+  .current {
+    font-style: normal;
+    font-weight: bold;
+    background: #35b1c2;
+    color: white;
+    border: 1px solid #35b1c2;
+  }
+  a {
+    text-decoration: none;
+    color: #35b1c2;
+    border: 1px solid #35b1c2;
+    &:hover, &:focus {
+      color: #000033;
+      border-color: #000033;
+    }
+  }
+  .page_info {
+    background: #35b1c2;
+    color: white;
+    padding: 0.4em 0.6em;
+    width: 22em;
+    margin-bottom: 0.3em;
+    text-align: center;
+    b {
+      color: #000033;
+      background: #35b1c2 + 60;
+      padding: 0.1em 0.25em;
+    }
+  }
 }
