--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
           <ul class="navbar-nav">
             <% if user_signed_in? %>
               <li class="nav-item">
-                <%= link_to 'Sign Out', 'destroy_user_session_path', method: :delete, class: 'nav-link' %>
+                <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
               </li>
             <% else %>
               <li class="nav-item">
@@ -38,6 +38,7 @@
               </li>
               <li class="nav-item">
                 <%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %>
+              </li>
             <% end %>
           
           </ul>
