--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,9 +1,40 @@
 <br />
+
 <div class="booyah box col-10 offset-1">
   <h1><%= @place.name %></h1>
   <i><%= @place.address %></i>
   <br /><br />
   <p><%= @place.description %></p>
+
+  <% if @place.latitude.present? && @place.longitude.present? %>
+  <script>
+
+    function initMap() {
+      var myLatLng = {lat: <%= @place.latitude %>, lng: <%= @place.longitude %>};
+
+      var map = new google.maps.Map(document.getElementById('map'), {
+        zoom: 12,
+        center: myLatLng
+      });
+
+      var marker = new google.maps.Marker({
+        position: myLatLng,
+        map: map,
+        title: 'Hello World!'
+      });
+    }
+  </script>
+
+  <script async defer
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUW66nuZ-YU73JDpb_fmnVVtSUQOt6aFA&callback=initMap">
+  </script>
+
+  <div id="map"></div>
+
+  <% end %>
+
+<br />
+
     <div class="float_right">
     <% if current_user && current_user == @place.user %>
       <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
@@ -11,3 +42,11 @@
     <% end %>
     </div>
 </div>  
+
+<div class="clear"></div>
+<%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
+  <%= f.input :message %>
+  <%= f.input :rating %>
+  <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
+<% end %>
+
