--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -35,25 +35,58 @@
 
 <br />
 
-    <div class="float_right">
+  <div class="float-left">
     <% if current_user && current_user == @place.user %>
       <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
       <%= link_to 'Delete', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'},class: 'btn btn-danger' %>
     <% end %>
-    </div>
+  </div>
 </div>  
 
+<!-- Button trigger modal -->
+<div class="float-right">
+<button type="button" class="btn btn-primary btn-md" data-toggle="modal" data-target="#myModal">
+  Add a Comment
+</button>
+</div>
+
+<br />
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+        <h4 class="modal-title" id="myModalLabel">Add a Comment</h4>
+      </div>
+      <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
+       <div class="modal-body"> 
+        <%= f.input :message %>
+        <%= f.input :rating, as: :select, collection: Comment::RATINGS %>
+      </div>  
+      <div class="modal-footer">  
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
+      </div>
+    <% end %>
+  </div>
+</div>
+</div>
+
 <div class="clear"></div>
-<%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
-  <%= f.input :message %>
-  <%= f.input :rating, as: :select, collection: Comment::RATINGS %>
-  <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
-<% end %>
 
-<h1>Comments</h1>
 
+<h1 class="float-left">Comments</h1>
+
+<br />
+<div class="clear"></div>
+
+<div class="row">
 <%= @place.comments.each do |comment| %>
-  <div>
+  <div class="col-12 col-sm-6">
     <blockquote>
       <% if comment.humanized_rating.present? %>
       <b><%= comment.humanized_rating %></b>
@@ -63,3 +96,4 @@
     </blockquote>
   </div>
 <% end %>
+</div>
