--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -41,26 +41,31 @@
       <%= link_to 'Delete', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'},class: 'btn btn-danger' %>
     <% end %>
   </div>
-</div>  
 
 <!-- Button trigger modal -->
-<div class="float-right">
-<button type="button" class="btn btn-primary btn-md" data-toggle="modal" data-target="#myModal">
-  Add a Comment
+  <div class="float-right">
+    <button type="button" class="btn btn-primary btn-md" data-toggle="modal" data-target="#commentModal">
+      Add a Comment
+    </button>
+
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary btn-md" data-toggle="modal" data-target="#photoModal">
+  Add a Photo
 </button>
 </div>
+</div>  
 
 <br />
 
 <!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="commentModal" tabindex="-1" role="dialog" aria-labelledby="commentLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">×</span>
         </button>
-        <h4 class="modal-title" id="myModalLabel">Add a Comment</h4>
+        <h4 class="modal-title" id="commentLabel">Add a Comment</h4>
       </div>
       <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
        <div class="modal-body"> 
@@ -76,16 +81,48 @@
 </div>
 </div>
 
+<!-- Modal -->
+<div class="modal fade" id="photoModal" tabindex="-1" role="dialog" aria-labelledby="photoLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+        <h4 class="modal-title" id="photoLabel">Add a Photo</h4>
+      </div>
+      <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
+        <%= f.input :caption %>
+        <%= f.input :picture %>
+      </div>  
+      <div class="modal-footer">  
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <%= f.submit "Add a Photo", class: 'btn btn-primary' %>
+      </div>
+    <% end %>
+  </div>
+</div>
+</div>
+
 <div class="clear"></div>
+<br />
+
+<div class="col-6 offset-3">
+<% @place.photos.each do |photo| %>
+  <%= image_tag photo.picture_url, class: 'img-fluid' %>
+  <%= photo.caption %>
+<% end %>
+</div>
 
 
 <h1 class="float-left">Comments</h1>
 
 <br />
 <div class="clear"></div>
+<br />
 
 <div class="row">
-<%= @place.comments.each do |comment| %>
+<% @place.comments.each do |comment| %>
   <div class="col-12 col-sm-6">
     <blockquote>
       <% if comment.humanized_rating.present? %>
@@ -97,3 +134,4 @@
   </div>
 <% end %>
 </div>
+
