--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -92,6 +92,7 @@
         <h4 class="modal-title" id="photoLabel">Add a Photo</h4>
       </div>
       <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
+        <div class="modal-body">
         <%= f.input :caption %>
         <%= f.input :picture %>
       </div>  
@@ -104,7 +105,6 @@
 </div>
 </div>
 
-<div class="clear"></div>
 <br />
 
 <div class="col-6 offset-3">
